Fixed the login bug which redirected you to a non-existant API point on successful login. Expanded Events to include txtColor and btnColor to allow for basic styling. Added hex_color validation to NormalizationHelper Added contrast_color to NormalizationHelper Updated the default events banner colors Fixed a glitch that has gone unnoticed in Cobalt since the very beginning: app() was not returning lookup_js_notation Fixed issue with vbox not displaying as flex column Fixed styling with paginated-containers Updated CobaltEvent_default's isElligibleForDisplay by adding cta_href to excluded pathnames Refactored JS global_function colorMathBlackOrWhite to more closely match the lumosity calculations found in the normalizer Added special case in sessionPolicyDate for "nag" session policy Updated ctaButton to reflect new Event styling options Fixed super annoying problem with banner events not playing their closing animation Made modal events change (and restore) document.title Fixed navigation drawer spawning. Now locks viewport scrolling  when drawer is open. Modal now accepts "pageTitle" destructured parameter. Changed input-autocomplete to select in templates/cobalt_events/edit.html Added new color fields and update color input styling. Added reset buttons to reset color fields.

--- a/shared/css/paginated-container.css
+++ b/shared/css/paginated-container.css
@@ -89,6 +89,7 @@
 
 .paginated-container--button:disabled {
     opacity: .2;
+    pointer-events: none;
 }
 
 .paginated-button--back {
@@ -106,9 +107,12 @@
     background: var(--project-color-button-init);
     color: var(--project-button-text);
 }
+.paginated-button--next:hover {
+    background: var(--project-color-button-init);
+}
 
 .paginated-container--button:hover{
-    background: var(--project-color-button-hover);
     color: var(--project-color-button-hover-text);
+    filter: brightness(120%);
 }
 
